--- a/wissnet.css
+++ b/wissnet.css
@@ -46,6 +46,7 @@ a { text-decoration: none; }
 a:hover { color:red }
 
 /* drop-down list support */
+/*
     ul {
         padding: 0;
         list-style: none;
@@ -59,8 +60,9 @@ a:hover { color:red }
         display: none;
     }
     ul li:hover ul {
-        display: block; /* display the dropdown */
+        display: block;
     }
+*/
 
 /* solves jpg rotation issue on Firefox, but not Chrome (yet) */
 /* (this seems to be no longer a problem, so it's commented out) */
